docs: add section Verbesserung des Entwurfs durch Refactoring

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/vorgehen beim entwerfen.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/vorgehen beim entwerfen.tex
@@ -1,4 +1,4 @@
-\section{Vorgehen beim Entwerfen}
+\section{Vorgehen beim Entwerfen}\label{sec:vorgehen-beim-entwerfen}
 Die Art und Weise, wie Klassen und ihr Zusammenspiel modelliert werden, hängt von der Aufgabenstellunf und der gewählten Architektur ab.\\
 
 \noindent
