--- a/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
@@ -9,6 +9,7 @@
 \input{part two/Objektorientierter Entwurf/entwurfsmuster}
 \input{part two/Objektorientierter Entwurf/beispiel eines entwurfs}
 \input{part two/Objektorientierter Entwurf/prinzipien guten entwurfs}
+\input{part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring}
 \newpage
 
 
