docs: add Zusammenfassung

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/index.tex
@@ -10,6 +10,7 @@
 \input{part two/Objektorientierter Entwurf/beispiel eines entwurfs}
 \input{part two/Objektorientierter Entwurf/prinzipien guten entwurfs}
 \input{part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring}
+\input{part two/Objektorientierter Entwurf/zusammenfassung}
 \newpage
 
 
