docs: add remark to Refactoring in given section
added ref to Refactoring Toward Deeper Insight of Eva03

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/verbesserung des entwurfs durch refactoring.tex
@@ -23,3 +23,6 @@ Mit Refactoring kann man die Qualität von Code verbessern.
 Allerdings zeigt die Praxis, dass fast jeder code kleinere oder größere Probleme hat, die immer weiter verbessert werden können.
 Teilweise sind Refactorings mit hohem Aufwand verbunden, wobei nur Qualität, aber nicht Funktionalität verbessert wird.\\
 Es sollte deshalb stehts zwischen Dringlichkeit, Aufwand und Auswirkungen abgewogen werden.
+
+\subsubsection*{Anmerkung}
+Dass Refactoring nicht nur Auswirkungen auf die Code-Qualität hat, sondern auch auf das Verständnis der Fachlichkeit und damit das umgesetzte fachliche Model, zeigt \textit{Evans} in dem Abschnitt ``Refactoring Toward Deeper Insight`` in \cite{Eva03}.
