chore(docs): fix typos, update wording and formatting
added ref to Refactoring Toward Deeper Insight of Eva03

--- a/docs/repetitorium/part two/Objektorientierte Analyse/lernziele.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/lernziele.tex
@@ -1,7 +1,7 @@
 \section{Lernziele}
 \begin{itemize}
     \item verstehen, wie und wozu Modelle in Analyse und Entwurf verwendet werden
-    \item wissen, wie Objekte und KLassen zur Analyse von Anforderungen der Software verwendet werden
+    \item wissen, wie Objekte und Klassen zur Analyse von Anforderungen der Software verwendet werden
     \item Klassendiagramme der Analyse auf systematische Art und Weise erstellen können
     \item Nutzen von Mustern beurteilen können
     \item den Aufbau von Mustern verstehen
