--- a/docs/repetitorium/part two/Objektorientierte Analyse/klassen und objekte.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/klassen und objekte.tex
@@ -12,7 +12,9 @@ In der \textbf{UML} werden Attribute und Verantwortlichkeiten oder Operationen i
 \noindent
 Einschränken des Typs können hinter dem Typ in geschweiften Klammern in der \textbf{Object Constraint Language}-Notation\footnote{
 s. Version 2.4: \url{https://www.omg.org/spec/OCL}, abgerufen 11.04.2024
-} (\textbf{OCL}) angegeben werden.\\
+} (\textbf{OCL}) angegeben werden\footnote{
+alternativ können Kommentare in entsprecheder UML-Notation angegeben werden.
+}
 Diese Angaben - oder als Kommentar in Textform angegeben - ersetzen im \textit{Klassendiagramm der Analyse} das \textbf{Datadictionary} (s. Abschnitt~\ref{sec:datadictionary-und-mengengerust}) (s. Abbildung~\ref{fig:moneyocl}).
 
 \begin{figure}
